--- a/users.html
+++ b/users.html
@@ -11,12 +11,13 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="style.css">
-  <title>SONFAVET</title>
+  <link rel="stylesheet" href="users.css">
+
+
+  <title>Insumos Vet</title>
 </head>
 
 <body class="d-flex flex-column">
-
   <nav class="navbar navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
@@ -32,7 +33,7 @@
       <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
         aria-labelledby="offcanvasDarkNavbarLabel">
         <div class="offcanvas-header">
-          <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menú</h5>
+          <p class="offcanvas-title" id="offcanvasDarkNavbarLabel">Menú</p>
           <button type="button" class="btn-close btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
@@ -41,13 +42,13 @@
               <a class="nav-link text-success" aria-current="page" href="#">Name Category</a>
             </li>
             <li class="nav-item">
-              <ul> <a class="btn btn-outline-success mt-3 w-100" type="button" href="">Datos de
-                  medicamentos</a></ul>
-              <ul> <a class="btn btn-outline-success mt-3 w-100" type="button" href="">Registro de medicamientos</a>
+              <ul><a class="btn btn-outline-success mt-3 w-100" type="button" href="/about.html">Sobre Nosotros</a></ul>
+              <ul> <a class="btn btn-outline-success mt-3 w-100" type="button">Datos de medicamentos</a></ul>
+              <ul> <a class="btn btn-outline-success mt-3 w-100" type="button">Registro de medicamientos</a>
               </ul>
-              <ul> <a class="btn btn-outline-success mt-3 w-100" type="button" href="">Reportes</a></ul>
-              <ul> <a class="btn btn-outline-success mt-3 w-100" type="button" href="/users.html">Administrar Usuarios</a></ul>
-              <ul> <a class="btn btn-outline-success mt-3 w-100" type="button" href="">Configuracion</a></ul>
+              <ul> <a class="btn btn-outline-success mt-3 w-100" type="button">Reportes</a></ul>
+              <ul> <a class="btn btn-outline-success mt-3 w-100" type="button">Administrar Usuarios</a></ul>
+              <ul> <a class="btn btn-outline-success mt-3 w-100" type="button">Configuracion</a></ul>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -69,39 +70,140 @@
     </div>
   </nav>
 
-  <main class="container-fluid flex-grow-1 flex-shrink-0">
-    <h1>Inicio</h1>
-    <div class="alert alert-primary" role="alert">
-      Welcome to the home page!
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-4 mt-3">
-          <div class="card card-1">
-            <h3>Medicamentos</h3>
-            <p>A curated set of ES5/ES6/TypeScript wrappers for plugins to easily add any native functionality to your
-              Ionic apps.</p>
+  <!-- -------------------------------------- -->
+  <main>
+    <div class="container add-Margin">
+      <!-- column -->
+      <div class="row ">
+        <div class="card">
+          <div class="card-body">
+            <!-- title -->
+            <div class="d-md-flex">
+              <div>
+                <h4 class="card-title">Clientes</h4>
+                <p class="card-subtitle">Overview Clientes</p>
+              </div>
+              <div class="ms-auto">
+                <div class="dl">
+                  <select class="form-select shadow-none">
+                    <option value="0" selected>Mes</option>
+                    <option value="1">Enero</option>
+                    <option value="2">Febrero</option>
+                    <option value="3">Marzo</option>
+                    <option value="4">Abril</option>
+                    <option value="5">Mayo</option>
+                    <option value="6">Junio</option>
+                    <option value="7">Julio</option>
+                    <option value="8">Agosto</option>
+                    <option value="9">Septiembre</option>
+                    <option value="10">Octubre</option>
+                    <option value="11">Noviembre</option>
+                    <option value="12">Diciembre</option>
+                  </select>
+                </div>
+              </div>
+            </div>
+            <!-- title -->
           </div>
-        </div>
-        <div class="col-md-4 mt-3">
-          <div class="card card-2">
-            <h3>Stock</h3>
-            <p>Tabs, buttons, inputs, lists, cards, and more! A comprehensive library
-              of mobile UI components, ready to go.</p>
-          </div>
-        </div>
-        <div class="col-md-4 mt-3">
-          <div class="card card-3">
-            <h3>Ingreso</h3>
-            <p>Learn how to easily customize and modify your app’s design to fit your
-              brand across all mobile platform styles.</p>
-          </div>
-        </div>
-        <div class="col-md-4 mt-3">
-          <div class="card card-3">
-            <h3>Egreso</h3>
-            <p>Learn how to easily customize and modify your app’s design to fit your
-              brand across all mobile platform styles.</p>
+          <div class="table-responsive">
+            <table class="table v-middle">
+              <thead>
+                <tr class="bg-light">
+                  <th class="border-top-0">Nombre</th>
+                  <th class="border-top-0">Orden</th>
+                  <th class="border-top-0">Devoluciones</th>
+                  <th class="border-top-0">Fecha Ult. Pedido</th>
+                  <th class="border-top-0">Estado</th>
+
+                  <th class="border-top-0">Total Value</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>
+                    <div class="d-flex align-items-center">
+                      <div class="m-r-10"><a class="btn btn-circle d-flex btn-info text-white">EA</a>
+                      </div>
+                      <div class=" ml-2">
+                        <h4 class="m-2">Name</h4>
+                      </div>
+                    </div>
+                  </td>
+                  <td>ID</td>
+                  <td>Informe</td>
+                  <td>
+                    <label class="label">13/06/1810</label>
+                  </td>
+                  <td>En camino</td>
+
+                  <td>
+                    <p class="m-b-0">$2850.06</p>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <div class="d-flex align-items-center">
+                      <div class="m-r-10"><a class="btn btn-circle d-flex btn-orange text-white">MA</a>
+                      </div>
+                      <div class=" ml-2">
+                        <h4 class="m-2">Name</h4>
+                      </div>
+                    </div>
+                  </td>
+                  <td>ID</td>
+                  <td>Informe</td>
+                  <td>
+                    <label class="label">13/06/1810</label>
+                  </td>
+                  <td>Entregado</td>
+
+                  <td>
+                    <p class="m-b-0">$2850.06</p>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <div class="d-flex align-items-center">
+                      <div class="m-r-10"><a class="btn btn-circle d-flex btn-success text-white">MP</a>
+                      </div>
+                      <div class=" ml-2">
+                        <h4 class="m-2">Name</h4>
+                      </div>
+                    </div>
+                  </td>
+                  <td>ID</td>
+                  <td>Informe</td>
+                  <td>
+                    <label class="label">13/06/1810</label>
+                  </td>
+                  <td>Pendiente</td>
+
+                  <td>
+                    <p class="m-b-0">$2850.06</p>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <div class="d-flex align-items-center">
+                      <div class="m-r-10"><a class="btn btn-circle d-flex btn-purple text-white">AA</a>
+                      </div>
+                      <div class=" ml-2">
+                        <h4 class="m-2">Name</h4>
+                      </div>
+                    </div>
+                  </td>
+                  <td>ID</td>
+                  <td>Informe</td>
+                  <td>
+                    <label class="label">13/06/1810</label>
+                  </td>
+                  <td>Pendiente</td>
+                  <td>
+                    <p class="m-b-0">$2850.06</p>
+                  </td>
+                </tr>
+              </tbody>
+            </table>
           </div>
         </div>
       </div>
@@ -165,7 +267,6 @@
       </div>
     </div>
   </footer>
-
 </body>
 
 </html>
